--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,9 +1,6 @@
 body{
-    margin-top: 0;
-    margin-left: 0;
-    margin-right: 0;
-    
-}
+    margin: 0;
+    }
 
 
 a{
@@ -16,48 +13,31 @@ a{
 
 /*////// HEADER //////*/
 
-.header {
-    width: 100%;
-    height: 100px;
+.navbar{
     background-image: linear-gradient(to right, #A770EF, #CF8BF3, #FDB99B);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-   
-    }
-    
-    .headerLogo {
-        width: 200px;
-        margin-left: 100px;
-    }
-    
-    .headerLogo img {
-    width: 100%;
-    }
-    
-    .headerMenu {
-        width:40% ;
-        margin-right: 140px;
-        
-    }
-    
-    .headerMenu ul {
-        list-style: none;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        height: 100%;
-        
-    }
-    
-    .headerMenu ul li {
-        display: inline-block;
-    }
+}  
 
-    .headerMenu ul li :hover{
-        border-bottom: solid 3px white;
-    }
 
+.nav-link{
+    color: white;
+}
+
+.btn-outline-success{
+    color: white;
+    border-color: white;
+}
+
+.navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .show>.nav-link{
+    color: white;
+}
+
+.nav-item :hover{
+    border-bottom: solid 2px white;
+}
+
+.navbar-light .navbar-toggler{
+    border-color: white;
+}
 
 
 
@@ -66,7 +46,7 @@ a{
 #banner {
     width: 1150px;
     height: 280px;
-    background-image: url("file:///Users/cmartinez/Desktop/DESARROLLO-WEB/clase4y5/deportes-martinez/entrega-de-proyecto-1/html/images/banner-juli.jpeg");   
+    background-image: url(/Users/cmartinez/Desktop/CURSOS-LIBROS/DESARROLLO-WEB/clase12y13-bootstrap/12-desafio1/images/banner-juli.jpeg); 
     height: 100px;
     background-repeat:repeat-x:
     background-position: center;
@@ -285,6 +265,10 @@ p{
     font-family: 'Poppins';   
 }
 
+#mainTittle{
+    margin: 5% 0 5% 0;
+}
+
 .mainSection {
     background-color: gray;
     width: 70%;
@@ -358,6 +342,22 @@ p{
 
 /*////// TERMINA MAIN DE COMO COMPRAR //////*/
 
+/*////// CAROUSEL  //////*/
+
+#container{
+    width: 75%;
+    height: 100%;
+    margin: 5% 10% 0 10%;
+}
+
+.carousel-caption{
+    background-color: #FDB99B;
+}
+
+
+
+
+/*////// FIN CAROUSEL  //////*/
 
 /*////// empieza Footer //////*/
 
